# biocypher-components-registry

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  adapter_config_from_preload.yaml  cli.py  croissant.jsonld  croissant_adapter.jsonld  docker-compose.yml  generic_preload_croissant.yaml  locustfile.py  pyproject.toml  registry.sqlite3  unified_adapters_metadata.jsonld
.github/: COPILOT_CONTEXT.md  COPILOT_INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 2-bug-report.yaml
.github/ISSUE_TEMPLATES/: 4-feature-request.yaml
.github/workflows/: validate_schema.yml
.web_new_datasets/: dataset_1.jsonld
data/in/: sample_annotations.tsv  sample_complexes.tsv  sample_enz_sub.tsv  sample_intercell.tsv  sample_networks_omnipath.tsv
external_repos/adapter_collectri/: collectri.json  croissant.jsonld
sandbox/: current_generation_implementation_status.md  dataset_generation_architecture.md  integration_architecture_diagram.md  omnipath_dataset_config.yaml  platform_architecture_diagram.md  project_diagram.md  project_vs_croissant_baker.md  raw_ideas.md
sdlc_docs/: project_context.md
sdlc_docs/a_requirements/: a-1_raw_ideas.md  a-2_user_stories.md
sdlc_docs/b_design/: architecture.md  deployment.md
sdlc_docs/c_verification/: api_contract_overview.md  api_manual_verification.md  interface_compatibility_checklist.md
src/api/: __init__.py  app.py  dependencies.py  errors.py  settings.py
src/core/: __init__.py  constants.py  discovery.py  exceptions.py  settings.py  validator.py
src/persistence/: __init__.py  factory.py  registration_sqlite_store.py  tables.py
tests/unit/: test_cli_discover.py  test_cli_duplicate_registration.py  test_cli_finish_registration.py  test_cli_refresh_registry.py  (+3 more)
(+148 files in other folders)
