[project]
name = "biocypher-components-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlcroissant>=1.0.22",    
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest-bdd>=8.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
